# clairvoyance

./: .gitignore  .mypy.ini  .pylintrc  .style.yapf  Dockerfile  Pipfile  README.md  SECURITY.md  clairvoyance-docker.sh  docker-entrypoint.sh  pyproject.toml  requirements.txt  troubleshooting.md
.github/: CONTRIBUTING.md
.github/actions/poetry-setup/: action.yml
.github/workflows/: cd.yml  ci.yaml  cicd-to-dockerhub.yml  lint.yaml  main.yml  tests.yml
clairvoyance/: __init__.py  __main__.py  cli.py  client.py  config.py  graphql.py  oracle.py  utils.py  wordlist.py
clairvoyance/entities/: __init__.py  context.py  errors.py  interfaces.py  meta.py  oracle.py  primitives.py
tests/: graphql_test.py  oracle_test.py  system.py
tests/apollo-server/: package-lock.json  package.json
tests/apollo-server/src/: index.js  schema.js
tests/data/: schema.1.json  schema.json  wordlist-for-apollo-server.txt  wordlist.txt
tests/data/swapi/: wordlist.txt
tests/server/: graphql.py  unstable.py
